product increment decrement

--- a/index.html
+++ b/index.html
@@ -234,7 +234,8 @@
                 class="h-9 flex flex-row border border-[#DBDFEA] rounded-[4px] w-[130px]"
               >
                 <div
-                  class="h-full w-[35px] flex justify-center items-center border border-[#DBDFEA] border-t-0 border-l-0 border-b-0"
+                  class="h-full w-[35px] flex justify-center items-center border border-[#DBDFEA] border-t-0 border-l-0 border-b-0 hover:cursor-pointer"
+                  id="decrement"
                 >
                   <span class="w-[19px]">
                     <i class="fa-solid fa-minus text-[#8091A7] text-[19px]"></i>
@@ -246,12 +247,13 @@
                 >
                   <h2
                     class="font-roboto font-normal text-sm leading-[23.1px] text-[#364A63]"
+                    id="countOrder"
                   >
                     0
                   </h2>
                 </div>
 
-                <div class="h-full w-[35px] flex justify-center items-center">
+                <div class="h-full w-[35px] flex justify-center items-center hover:cursor-pointer" id="increment">
                   <span class="w-[19px]">
                     <i class="fa-solid fa-plus text-[#8091A7] text-[19px]"></i>
                   </span>
