show price base on size

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
               <div>
                 <h3
                   class="font-roboto font-bold text-2xl leading-[30px] text-[#6576FF]"
+                  id="showPrice"
                 >
                   $79.00
                 </h3>
@@ -182,7 +183,7 @@
               >
                 wrist size
               </h3>
-              <div class="flex flex-row w-full gap-x-3 mt-[10px]">
+              <div class="flex flex-row w-full gap-x-3 mt-[10px]" id="selectSize">
                 <div
                   class="py-2 px-[18px] border border-[#8091A7] rounded-[3px] transition-all duration-150 ease-linear group hover:cursor-pointer hover:border-[#6576FF]"
                 >
