collect cart data for obj

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             <div>
               <h2
                 class="text-[40px] font-roboto font-bold leading-[44px] tracking-[-1.2px] text-[#364A63]"
+                id="productTitle"
               >
                 Classy Modern Smart watch
               </h2>
@@ -265,6 +266,7 @@
               <div>
                 <button
                   class="py-2 px-[18px] bg-[#6576FF] rounded-[3px] font-roboto font-bold text-[13px] leading-5 tracking-[0.26px] text-white"
+                  onclick="addCart()"
                 >
                   Add to Cart
                 </button>
