showing cart data

--- a/index.html
+++ b/index.html
@@ -384,55 +384,9 @@
               </div>
             </div>
 
-            <div
-              class="w-[563px] mx-auto flex flex-row justify-between items-center border border-[#DBDFEA] border-t-0 border-r-0 border-l-0 mt-4 pt-1 pb-2"
-            >
-              <div class="w-[278px] flex flex-row items-center">
-                <div class="h-[41.79px] w-[36.64px]">
-                  <img
-                    src="./resource/image/purple.jpeg"
-                    class="h-full w-full object-contain"
-                    alt="image"
-                  />
-                </div>
-                <div class="ml-[7.36px]">
-                  <p
-                    class=" font-normal text-sm leading-[23.1px] text-[#8091A7] capitalize"
-                  >
-                    classy modern smart watch
-                  </p>
-                </div>
-              </div>
-              <div class="w-[62px]">
-                <h5
-                  class=" font-normal text-sm leading-[23.1px] text-[#364A63] capitalize"
-                >
-                  black
-                </h5>
-              </div>
-              <div class="w-[69px]">
-                <h5
-                  class=" font-normal text-sm leading-[23.1px] text-[#364A63] capitalize"
-                >
-                  xl
-                </h5>
-              </div>
-              <div class="w-[59px]">
-                <h5
-                  class=" font-normal text-sm leading-[23.1px] text-[#364A63] capitalize"
-                >
-                  1
-                </h5>
-              </div>
-              <div class="w-[91px] text-right">
-                <h5
-                  class=" font-normal text-sm leading-[23.1px] text-[#364A63] capitalize"
-                >
-                  $99.00
-                </h5>
-              </div>
+            <div id="appendData">
+              <!-- cart data will appear here -->
             </div>
-
             <div
               class="w-[563px] mx-auto flex flex-row justify-between mt-4 pt-1 pb-2"
             >
