--- a/index.html
+++ b/index.html
@@ -399,16 +399,16 @@
               </div>
               <div class="w-[59px]">
                 <h5
-                  class=" font-bold text-sm leading-[34px] text-[#364A63] tracking-[-0.2px] capitalize"
+                  class=" font-bold text-sm leading-[34px] text-[#364A63] tracking-[-0.2px] capitalize" id="totalQnt"
                 >
-                  4
+                  0
                 </h5>
               </div>
               <div class="w-[91px] text-right">
                 <h5
-                  class=" font-bold text-lg leading-[34px] text-[#364A63] tracking-[-0.2px] capitalize"
+                  class=" font-bold text-lg leading-[34px] text-[#364A63] tracking-[-0.2px] capitalize" id="totalPrice"
                 >
-                  $456.00
+                  $0
                 </h5>
               </div>
             </div>
