--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
               </div>
 
               <div class="h-5 w-5 flex justify-center items-center">
-                <LuHeart class="text-[#6576FF]" />
+                <i class="fa-regular fa-heart text-[#6576FF]"></i>
               </div>
             </div>
           </div>
