--- a/index.html
+++ b/index.html
@@ -330,11 +330,11 @@
         <!-- checkoutCount-finish -->
         <!-- modal-start -->
         <div
-          class="w-full mx-auto fixed top-0 left-0 h-[100vh] bg-black/50 transition-all duration-150 ease-linear hidden" id="modalBox"
+          class="w-full mx-auto fixed top-0 left-0 h-[100vh] bg-black/50 transition-all duration-150 ease-linear hidden flex justify-center items-center overflow-y-scroll" id="modalBox"
           onclick="modalCondition(false)"
         >
           <div
-            class="w-[651px] mx-auto bg-[#FFFFFF] rounded-[20px] py-[44px] translate-y-[247px]"
+            class="w-[651px] mx-auto bg-[#FFFFFF] rounded-[20px] py-[44px]"
           >
             <div class="w-[563px] mx-auto">
               <h2
